setup base for template and styling

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,12 +1,10 @@
+@import "base";
+@import "components";
+@import "text";
+
 @font-face {
   font-family: 'Montserrat';
   src: url('./fonts/Montserrat-Regular.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
-}
-
-body {
-  background-color: purple;
-  color: #ccc;
-  font-family: 'Montserrat';
 }
