--- a/src/template/index.html
+++ b/src/template/index.html
@@ -6,6 +6,48 @@
   </head>
   <body>
     <div id="app">
+      <div class="c-sidebar">
+        <header class="c-sidebar__header">
+        </header>
+        <nav class="c-sidebar__navigation">
+          <ul class="c-sidebar-list">
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Dashboard</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Orders</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Companies</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Products</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Documents</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Pricing</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Brands</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Settings</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Reports</a>
+            </li>
+            <li class="c-sidebar-list__item">
+              <a href="#" class="c-sidebar-link">Account Users</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <section class="c-body-container">
+        <header class="">
+        </header>
+      </section>
     </div>
   </body>
 </html>
