--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -2,13 +2,16 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   height: 100%;
   width: 100%;
 }
 
 body,
-ul {
+ul,
+h1, h2, h3, h4, h5, h6,
+p {
   margin: 0;
   padding: 0;
 }
