--- a/src/style/components/_sidebar.scss
+++ b/src/style/components/_sidebar.scss
@@ -1,10 +1,10 @@
 .c-sidebar {
   background-color: #702283;
   height: 100%;
-  left: 0;
+  // left: 0;
   overflow-y: scroll;
-  position: fixed;
-  top: 0;
+  // position: fixed;
+  // top: 0;
   width: 246px;
 
   &__header {
