add placeholder for floating total box

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -161,6 +161,10 @@
             When you enter into any new are of science, you almost always find yourself with a baffling new language of technical terms to learn before
           </div>
 
+          <div class="c-box">
+            Things be here
+          </div>
+
         </section>
       </section>
     </div>
