Task setup basic template (#3)
* setup base for template and styling

* change font color based on block state for sidebar link

* setup basic layout

* add placeholder for floating total box

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,12 +1,12 @@
+@import "base";
+@import "mixins";
+@import "layout";
+@import "components";
+@import "text";
+
 @font-face {
   font-family: 'Montserrat';
   src: url('./fonts/Montserrat-Regular.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
-}
-
-body {
-  background-color: purple;
-  color: #ccc;
-  font-family: 'Montserrat';
 }
