componentize summary and style it

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -14,6 +14,10 @@
   display: flex;
   flex-direction: row;
 
+  &--spread {
+    justify-content: space-around;
+  }
+
   &--column {
     flex-direction: column;
     justify-content: center;
