--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -12,10 +12,19 @@ body,
 ul,
 h1, h2, h3, h4, h5, h6,
 p {
-  margin: 0;
+  margin: 5px 0;
   padding: 0;
 }
 
 ul {
   list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #626272;
+}
+
+input {
+  border: none;
 }
