--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -8,6 +8,13 @@
 .c-crumbs {
   padding-top: 10px;
   padding-bottom: 10px;
+  color: #ccc;
+
+  &__current {
+    color: black;
+    text-transform: uppercase;
+  }
+
 }
 
 .c-box {
@@ -16,5 +23,24 @@
   border-radius: 3px;
   margin-top: 10px;
   padding: 10px;
+}
+
+.c-dropdown {
+  @extend .c-box;
+  margin: 10px;
+}
+
+.c-button {
+  width: 140px;
+  height: 44px;
+  border-radius: 5px;
   display: block;
+  text-align: center;
+  line-height: 44px;
+  font-size: 14px;
+
+  &--grey {
+    background-color: #8899AA;
+    color: #FFFFFF;
+  }
 }
