--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -86,3 +86,13 @@
   }
 
 }
+
+.c-order-summary {
+  display: none;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 292px;
+  height: 252px;
+  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.12);
+}
