attempt to fix font - failed

--- a/src/style/_text.scss
+++ b/src/style/_text.scss
@@ -1,3 +1,10 @@
+@font-face: {
+  font-family: "Montserrat";
+  src: url("./fonts/Montserrat-Regular.ttf");
+  font-style: normal;
+  font-weight: normal;
+}
+
 $text-color-1: #8899AA;
 $text-color-2: #6C5E73;
 $text-color-3: #626272;
