--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6,
 p {
   margin: 5px 0;
   padding: 0;
+  font-family: 'Montserrat';
 }
 
 ul {
@@ -27,4 +28,23 @@ a {
 
 input {
   border: none;
+}
+
+table {
+
+  tr {
+    font-size: 10px;
+    height: 50px;
+
+    th, td {
+      min-width: 100px;
+      text-align: left;
+    }
+
+    td {
+      font-size: 12px;
+    }
+
+  }
+
 }
