--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -96,3 +96,19 @@
   height: 252px;
   box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.12);
 }
+
+.c-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.10);
+  width: 100%;
+  height: 100%;
+  display: none;
+
+  &--active {
+    display: block;
+  }
+
+}
